--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
-body {
-  background: red;
-  color: blue; }
+.header {
+  font-family: Arial, Helvetica, sans-serif; }
+
+.header__logo {
+  text-align: center; }
+
+.header__logo .header__img {
+  max-width: 350px; }
 
 /*# sourceMappingURL=style.css.map */
