--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,41 +6,40 @@ $dark-grey: #464646
 .header
     font-family: Arial, Helvetica, sans-serif
 
-.header__logo
-    text-align: center
+    &__logo
+        text-align: center
+    &__img
+        max-width: 350px
+    &__menu
+        .menu
+            &__list
+                display: flex
+                justify-content: center
+                border-top: 1px solid $light-grey
+                border-bottom: 1px solid $light-grey
+                margin-left: auto
+                margin-right: auto
+                width: 80%
+                padding: 20px 0
+            &__links
+                position: relative
+                
+                &:not(:last-child)::after
+                    content: ""
+                    position: absolute
+                    top: 0
+                    bottom: 0
+                    right: -3px
+                    margin: auto
+                    height: 15px
+                    width: 1px
+                    background-color: $light-grey
+            &__link
+                padding: 0 25px
+                color: $dark-grey
 
-.header__logo .header__img
-    max-width: 350px
 
-.header .menu__list
-    display: flex
-    justify-content: center
-    border-top: 1px solid $light-grey
-    border-bottom: 1px solid $light-grey
-    margin-left: auto
-    margin-right: auto
-    width: 80%
-    padding: 20px 0
-
-.header .menu__list .menu__links
-    position: relative
-
-.header .menu__list .menu__links:not(:last-child)::after
-    content: ""
-    position: absolute
-    top: 0
-    bottom: 0
-    right: -3px
-    margin: auto
-    height: 15px
-    width: 1px
-    background-color: $light-grey
-
-.header .menu__list .menu__links .menu__link
-    padding: 0 25px
-    color: $dark-grey
-
-.header .menu__list .menu__links .menu__link:hover
+.header__menu .menu__list .menu__links .menu__link:hover
     color: $purple
 
 .footer
@@ -48,14 +47,13 @@ $dark-grey: #464646
     padding: 20px 0
     font-family: Arial, Helvetica, sans-serif
     // Este trecho de estilo posiciona o footer na parte de baixo da nossa tela
-    position: relative
+    position: absolute
     bottom: 0
     left: 50%
     transform: translatex(-50%)
 
-.footer .footer__logo
-    max-width: 100px
-
-.footer .footer__txt
-    margin: auto
-    font-size: 14px
+    &__logo
+        max-width: 100px
+    &__txt
+        margin: auto
+        font-size: 14px
