--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,6 +3,7 @@ $purple: #A050BE
 $light-grey: #eaeaeb
 $dark-grey: #464646
 $yellow: #FABE50
+$img-width: 45%
 
 .header
     font-family: Arial, Helvetica, sans-serif
@@ -11,37 +12,36 @@ $yellow: #FABE50
         text-align: center
     &__img
         max-width: 350px
-    &__menu
-        .menu
-            &__list
-                display: flex
-                justify-content: center
-                border-top: 1px solid $light-grey
-                border-bottom: 1px solid $light-grey
-                margin-left: auto
-                margin-right: auto
-                width: 80%
-                padding: 20px 0
-            &__links
-                position: relative
-                
-                &:not(:last-child)::after
-                    content: ""
-                    position: absolute
-                    top: 0
-                    bottom: 0
-                    right: -3px
-                    margin: auto
-                    height: 15px
-                    width: 1px
-                    background-color: $light-grey
-            &__link
-                padding: 0 25px
-                color: $dark-grey
 
+    .menu
+        &__list
+            display: flex
+            justify-content: center
+            border-top: 1px solid $light-grey
+            border-bottom: 1px solid $light-grey
+            margin-left: auto
+            margin-right: auto
+            width: 80%
+            padding: 20px 0
+        &__links
+            position: relative
+            
+            &:not(:last-child)::after
+                content: ""
+                position: absolute
+                top: 0
+                bottom: 0
+                right: -3px
+                margin: auto
+                height: 15px
+                width: 1px
+                background-color: $light-grey
+        &__link
+            padding: 0 25px
+            color: $dark-grey
 
-.header__menu .menu__list .menu__links .menu__link:hover
-    color: $purple
+            &:hover
+                color: $purple
 
 .footer
     text-align: center
@@ -146,3 +146,60 @@ $yellow: #FABE50
 
         &:hover
             color: $purple
+
+.about
+    width: 80%
+    margin: 0 auto 40px
+    font-family: Arial, Helvetica, sans-serif
+
+    &__title
+        background-color: $light-grey
+        text-align: center
+        padding: 20px
+    &__h1
+        font-size: 22px
+        color: $dark-grey
+        letter-spacing: 1px
+        margin-top: 5px
+        margin-bottom: 10px
+        margin-left: 0
+        margin-right: 0
+    .breadcrumb
+        display: flex
+        justify-content: center
+        align-items: center
+
+        &__link
+            font-size: 12px
+            text-decoration: none
+            color: $dark-grey
+
+            &:hover
+                text-decoration: underline
+                color: $purple
+        &__img
+            width: 10px
+            margin: 8px
+    &__img
+        width: 100%
+        margin-bottom: 20px
+    &__intro
+        font-weight: 100
+        color: $dark-grey
+        width: 70%
+        margin: 30px auto
+        text-align: center
+        font-size: 16px
+    &__split
+        display: flex
+        justify-content: center
+        flex-wrap: wrap
+        align-items: center
+    &__img2
+        width: $img-width
+    &__txt
+        width: calc(100% - #{$img-width})
+    &__p
+        font-size: 14px
+        padding: 10px 20px
+        color: $dark-grey
