--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,6 +5,11 @@ $dark-grey: #464646
 $yellow: #FABE50
 $img-width: 45%
 
+%no-decoration
+    text-decoration: none
+%u-decoration
+    text-decoration: underline
+
 .header
     font-family: Arial, Helvetica, sans-serif
 
@@ -146,6 +151,46 @@ $img-width: 45%
 
         &:hover
             color: $purple
+    &__sidebar
+        width: 25%
+        padding: 40px 10px
+
+    .sidebar
+        &__top
+            border: 1px solid $light-grey
+            padding: 15px 20px
+        &__title
+            background-color: $yellow
+            text-align: center
+            padding: 10px 20px
+            margin: 0
+            letter-spacing: 1.5px
+        &__posts
+            margin: 0
+            padding: 0
+            list-style: none
+        &__list
+            display: flex
+            justify-content: center
+            flex-wrap: wrap
+            align-items: center
+            padding: 15px 0
+            &:not(:last-child)
+                border-bottom: 1px dashed $light-grey
+        &__img
+            width: 40%
+        &__details
+            width: 50%
+            padding-left: 10px
+        &__post-title
+            font-size: 14px
+            color: $purple
+            @extend %no-decoration
+            &:hover
+                @extend %u-decoration
+        &__post-date
+            font-size: 12px
+            margin: 5px 0 0 0
 
 .about
     width: 80%
@@ -195,7 +240,7 @@ $img-width: 45%
         justify-content: center
         flex-wrap: wrap
         align-items: center
-    &__img2
+    &__img-description
         width: $img-width
     &__txt
         width: calc(100% - #{$img-width})
