--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,24 @@
     margin-right: auto;
     width: 80%;
     padding: 20px 0; }
+    @media (max-width: 767.98px) {
+      .header .menu__list {
+        width: 90%;
+        padding: 15px 0;
+        flex-wrap: wrap; } }
+    @media (min-width: 768px) and (max-width: 1199.98px) {
+      .header .menu__list {
+        width: 80%;
+        padding: 20px 0; } }
+    @media (min-width: 1200px) {
+      .header .menu__list {
+        width: 80%;
+        padding: 20px 0; } }
   .header .menu__links {
     position: relative; }
+    @media (max-width: 767.98px) {
+      .header .menu__links {
+        padding: 5px 0; } }
     .header .menu__links:not(:last-child)::after {
       content: "";
       position: absolute;
@@ -59,6 +75,9 @@
   .main__content {
     width: 70%;
     padding: 40px 8px; }
+    @media (max-width: 767.98px) {
+      .main__content {
+        width: 100%; } }
   .main__post {
     text-align: center;
     max-width: 800px;
@@ -172,6 +191,9 @@
   width: 80%;
   margin: 0 auto 40px;
   font-family: Arial, Helvetica, sans-serif; }
+  @media (max-width: 767.98px) {
+    .about {
+      width: 90%; } }
   .about__title {
     background-color: #eaeaeb;
     text-align: center;
@@ -208,6 +230,9 @@
     margin: 30px auto;
     text-align: center;
     font-size: 16px; }
+    @media (max-width: 767.98px) {
+      .about__intro {
+        width: 90%; } }
   .about__split {
     display: flex;
     justify-content: center;
@@ -215,8 +240,15 @@
     align-items: center; }
   .about__img-description {
     width: 45%; }
+    @media (max-width: 767.98px) {
+      .about__img-description {
+        width: 80%; } }
   .about__txt {
     width: calc(100% - 45%); }
+    @media (max-width: 767.98px) {
+      .about__txt {
+        width: 90%;
+        text-align: center; } }
   .about__p {
     font-size: 14px;
     padding: 10px 20px;
@@ -226,6 +258,9 @@
   width: 80%;
   margin: 0 auto 40px;
   font-family: Arial, Helvetica, sans-serif; }
+  @media (max-width: 767.98px) {
+    .article {
+      width: 90%; } }
   .article__title {
     background-color: #eaeaeb;
     text-align: center;
