--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@
     max-width: 100px; }
   .footer__txt {
     margin: auto;
-    font-size: 14px; }
+    font-size: 0.875rem; }
 
 .main {
   display: flex;
@@ -85,7 +85,7 @@
     margin-right: auto; }
   .main__title {
     text-decoration: none;
-    font-size: 22px;
+    font-size: 1.375rem;
     color: #464646;
     letter-spacing: 1.5; }
     .main__title:hover {
@@ -98,10 +98,10 @@
     margin-bottom: 20px; }
   .main__date {
     margin: 0 10px;
-    font-size: 12px;
+    font-size: 0.75rem;
     font-style: italic; }
   .main__tag {
-    font-size: 14px;
+    font-size: 0.875rem;
     padding: 5px 7px;
     color: #A050BE;
     border: 1px solid #A050BE;
@@ -115,10 +115,10 @@
     max-width: 650px;
     margin-left: auto;
     margin-right: auto;
-    font-size: 14px; }
+    font-size: 0.875rem; }
   .main__btn {
     text-decoration: none;
-    font-size: 16px;
+    font-size: 1rem;
     letter-spacing: 1.5;
     color: #A050BE;
     background-color: #FABE50;
@@ -137,7 +137,7 @@
     width: 50%;
     border-right: 1px solid #eaeaeb; }
   .main__p {
-    font-size: 14px;
+    font-size: 0.875rem;
     color: #464646;
     margin-top: 10px;
     margin-bottom: 10px; }
@@ -145,7 +145,7 @@
     width: 50%; }
   .main__a {
     text-decoration: none;
-    font-size: 14px;
+    font-size: 0.875rem;
     color: #464646;
     margin-top: 10px;
     margion-bottom: 10px; }
@@ -181,10 +181,10 @@
     width: 50%;
     padding-left: 10px; }
   .main .sidebar__post-title {
-    font-size: 14px;
+    font-size: 0.875rem;
     color: #A050BE; }
   .main .sidebar__post-date {
-    font-size: 12px;
+    font-size: 0.75rem;
     margin: 5px 0 0 0; }
 
 .about {
@@ -199,7 +199,7 @@
     text-align: center;
     padding: 20px; }
   .about__h1 {
-    font-size: 22px;
+    font-size: 1.375rem;
     color: #464646;
     letter-spacing: 1px;
     margin-top: 5px;
@@ -211,7 +211,7 @@
     justify-content: center;
     align-items: center; }
     .about .breadcrumb__link {
-      font-size: 12px;
+      font-size: 0.75rem;
       text-decoration: none;
       color: #464646; }
       .about .breadcrumb__link:hover {
@@ -229,7 +229,7 @@
     width: 70%;
     margin: 30px auto;
     text-align: center;
-    font-size: 16px; }
+    font-size: 1rem; }
     @media (max-width: 767.98px) {
       .about__intro {
         width: 90%; } }
@@ -250,7 +250,7 @@
         width: 90%;
         text-align: center; } }
   .about__p {
-    font-size: 14px;
+    font-size: 0.875rem;
     padding: 10px 20px;
     color: #464646; }
 
@@ -266,7 +266,7 @@
     text-align: center;
     padding: 20px; }
   .article__h1 {
-    font-size: 22px;
+    font-size: 1.375rem;
     color: #464646;
     letter-spacing: 1px;
     margin-top: 5px;
@@ -277,7 +277,7 @@
     display: flex;
     justify-content: center; }
     .article .breadcrumb__link {
-      font-size: 12px;
+      font-size: 0.75rem;
       color: #464646; }
       .article .breadcrumb__link:hover {
         color: #A050BE; }
@@ -293,17 +293,17 @@
     align-items: center; }
   .article__date {
     margin: 0 10px;
-    font-size: 12px;
+    font-size: 0.75rem;
     font-style: italic; }
   .article__tag {
-    font-size: 14px;
+    font-size: 0.875rem;
     padding: 5px 7px;
     color: #A050BE;
     border: 1px solid #A050BE;
     margin: 0 10px; }
   .article__content {
     font-weight: 100;
-    font-size: 14px;
+    font-size: 0.875rem;
     color: #464646;
     padding: 10px 20px; }
 
