--- a/sass/style.sass
+++ b/sass/style.sass
@@ -28,6 +28,12 @@ $img-width: 45%
     @media (min-width: 1200px)
         @content
 
+@function calculateRem($size)
+    @return $size / 16px * 1rem
+
+@mixin fontSize($size)
+    font-size: calculateRem($size)
+
 .header
     font-family: Arial, Helvetica, sans-serif
 
@@ -92,7 +98,7 @@ $img-width: 45%
         max-width: 100px
     &__txt
         margin: auto
-        font-size: 14px
+        @include fontSize(14px)
 
 .main
     display: flex
@@ -112,7 +118,7 @@ $img-width: 45%
         margin-right: auto
     &__title
         text-decoration: none
-        font-size: 22px
+        @include fontSize(22px)
         color: $dark-grey
         letter-spacing: 1.5
 
@@ -127,10 +133,10 @@ $img-width: 45%
         margin-bottom: 20px
     &__date
         margin: 0 10px
-        font-size: 12px
+        @include fontSize(12px)
         font-style: italic
     &__tag
-        font-size: 14px
+        @include fontSize(14px)
         padding: 5px 7px
         color: $purple
         border: 1px solid $purple
@@ -144,10 +150,10 @@ $img-width: 45%
         max-width: 650px
         margin-left: auto
         margin-right: auto
-        font-size: 14px
+        @include fontSize(14px)
     &__btn
         text-decoration: none
-        font-size: 16px
+        @include fontSize(16px)
         letter-spacing: 1.5
         color: $purple
         background-color: $yellow
@@ -168,7 +174,7 @@ $img-width: 45%
         width: 50%
         border-right: 1px solid $light-grey
     &__p
-        font-size: 14px
+        @include fontSize(14px)
         color: $dark-grey
         margin-top: 10px
         margin-bottom: 10px
@@ -176,7 +182,7 @@ $img-width: 45%
         width: 50%
     &__a
         text-decoration: none
-        font-size: 14px
+        @include fontSize(14px)
         color: $dark-grey
         margin-top: 10px
         margion-bottom: 10px
@@ -213,13 +219,13 @@ $img-width: 45%
             width: 50%
             padding-left: 10px
         &__post-title
-            font-size: 14px
+            @include fontSize(14px)
             color: $purple
             @extend %no-decoration
             &:hover
                 @extend %u-decoration
         &__post-date
-            font-size: 12px
+            @include fontSize(12px)
             margin: 5px 0 0 0
 
 .about
@@ -235,7 +241,7 @@ $img-width: 45%
         text-align: center
         padding: 20px
     &__h1
-        font-size: 22px
+        @include fontSize(22px)
         color: $dark-grey
         letter-spacing: 1px
         margin-top: 5px
@@ -248,7 +254,7 @@ $img-width: 45%
         align-items: center
 
         &__link
-            font-size: 12px
+            @include fontSize(12px)
             text-decoration: none
             color: $dark-grey
 
@@ -267,7 +273,7 @@ $img-width: 45%
         width: 70%
         margin: 30px auto
         text-align: center
-        font-size: 16px
+        @include fontSize(16px)
         @include for-phone-only
             width: 90%
     &__split
@@ -285,7 +291,7 @@ $img-width: 45%
             width: 90%
             text-align: center
     &__p
-        font-size: 14px
+        @include fontSize(14px)
         padding: 10px 20px
         color: $dark-grey
 
@@ -302,7 +308,7 @@ $img-width: 45%
         text-align: center
         padding: 20px
     &__h1
-        font-size: 22px
+        @include fontSize(22px)
         color: $dark-grey
         letter-spacing: 1px
         margin-top: 5px
@@ -314,7 +320,7 @@ $img-width: 45%
         @include flx(justify-content, center)
 
         &__link
-            font-size: 12px
+            @include fontSize(12px)
             @extend %no-decoration
             color: $dark-grey
             &:hover
@@ -331,16 +337,16 @@ $img-width: 45%
         align-items: center
     &__date
         margin: 0 10px
-        font-size: 12px
+        @include fontSize(12px)
         font-style: italic
     &__tag
-        font-size: 14px
+        @include fontSize(14px)
         padding: 5px 7px
         color: $purple
         border: 1px solid $purple
         margin: 0 10px
     &__content
         font-weight: 100
-        font-size: 14px
+        @include fontSize(14px)
         color: $dark-grey
         padding: 10px 20px
