--- a/sass/style.sass
+++ b/sass/style.sass
@@ -34,71 +34,7 @@ $img-width: 45%
 @mixin fontSize($size)
     font-size: calculateRem($size)
 
-.header
-    font-family: Arial, Helvetica, sans-serif
-
-    &__logo
-        text-align: center
-    &__img
-        max-width: 350px
-
-    .menu
-        &__list
-            display: flex
-            justify-content: center
-            border-top: 1px solid $light-grey
-            border-bottom: 1px solid $light-grey
-            margin-left: auto
-            margin-right: auto
-            width: 80%
-            padding: 20px 0
-            @include for-phone-only
-                width: 90%
-                padding: 15px 0
-                flex-wrap: wrap
-            @include for-tablet-only
-                width: 80%
-                padding: 20px 0
-            @include for-desktop-only
-                width: 80%
-                padding: 20px 0
-        &__links
-            position: relative
-            @include for-phone-only
-                padding: 5px 0
-            
-            &:not(:last-child)::after
-                content: ""
-                position: absolute
-                top: 0
-                bottom: 0
-                right: -3px
-                margin: auto
-                height: 15px
-                width: 1px
-                background-color: $light-grey
-        &__link
-            padding: 0 25px
-            color: $dark-grey
-
-            &:hover
-                color: $purple
-
-.footer
-    text-align: center
-    padding: 20px 0
-    font-family: Arial, Helvetica, sans-serif
-    // Este trecho de estilo posiciona o footer na parte de baixo da nossa tela
-    position: relative
-    bottom: 0
-    left: 50%
-    transform: translatex(-50%)
-
-    &__logo
-        max-width: 100px
-    &__txt
-        margin: auto
-        @include fontSize(14px)
+@import 'header', 'footer', 'about', 'article'
 
 .main
     display: flex
@@ -227,126 +163,3 @@ $img-width: 45%
         &__post-date
             @include fontSize(12px)
             margin: 5px 0 0 0
-
-.about
-    @include for-phone-only
-        width: 90%
-
-    width: 80%
-    margin: 0 auto 40px
-    font-family: Arial, Helvetica, sans-serif
-
-    &__title
-        background-color: $light-grey
-        text-align: center
-        padding: 20px
-    &__h1
-        @include fontSize(22px)
-        color: $dark-grey
-        letter-spacing: 1px
-        margin-top: 5px
-        margin-bottom: 10px
-        margin-left: 0
-        margin-right: 0
-    .breadcrumb
-        display: flex
-        justify-content: center
-        align-items: center
-
-        &__link
-            @include fontSize(12px)
-            text-decoration: none
-            color: $dark-grey
-
-            &:hover
-                text-decoration: underline
-                color: $purple
-        &__img
-            width: 10px
-            margin: 8px
-    &__img
-        width: 100%
-        margin-bottom: 20px
-    &__intro
-        font-weight: 100
-        color: $dark-grey
-        width: 70%
-        margin: 30px auto
-        text-align: center
-        @include fontSize(16px)
-        @include for-phone-only
-            width: 90%
-    &__split
-        display: flex
-        justify-content: center
-        flex-wrap: wrap
-        align-items: center
-    &__img-description
-        width: $img-width
-        @include for-phone-only
-            width: 80%
-    &__txt
-        width: calc(100% - #{$img-width})
-        @include for-phone-only
-            width: 90%
-            text-align: center
-    &__p
-        @include fontSize(14px)
-        padding: 10px 20px
-        color: $dark-grey
-
-.article
-    @include for-phone-only
-        width: 90%
-
-    width: 80%
-    margin: 0 auto 40px
-    font-family: Arial, Helvetica, sans-serif
-
-    &__title
-        background-color: $light-grey
-        text-align: center
-        padding: 20px
-    &__h1
-        @include fontSize(22px)
-        color: $dark-grey
-        letter-spacing: 1px
-        margin-top: 5px
-        margin-bottom: 10px
-        margin-left: 0
-        margin-right: 0
-    
-    .breadcrumb
-        @include flx(justify-content, center)
-
-        &__link
-            @include fontSize(12px)
-            @extend %no-decoration
-            color: $dark-grey
-            &:hover
-                @extend %u-decoration
-                color: $purple
-        &__img
-            width: 10px
-            margin: 8px
-    &__img
-        margin-bottom: 20px
-        width: 100%
-    &__details
-        @include flx(justify-content, center)
-        align-items: center
-    &__date
-        margin: 0 10px
-        @include fontSize(12px)
-        font-style: italic
-    &__tag
-        @include fontSize(14px)
-        padding: 5px 7px
-        color: $purple
-        border: 1px solid $purple
-        margin: 0 10px
-    &__content
-        font-weight: 100
-        @include fontSize(14px)
-        color: $dark-grey
-        padding: 10px 20px
