--- a/css/style.css
+++ b/css/style.css
@@ -101,8 +101,7 @@
       width: 10px;
       margin: 8px; }
   .about__img {
-    width: 100%;
-    margin-bottom: 20px; }
+    width: 100%; }
   .about__intro {
     font-weight: 100;
     color: #464646;
@@ -148,11 +147,7 @@
   .article__h1 {
     font-size: 1.375rem;
     color: #464646;
-    letter-spacing: 1px;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    margin-left: 0;
-    margin-right: 0; }
+    letter-spacing: 1px; }
   .article .breadcrumb {
     display: flex;
     justify-content: center; }
@@ -165,27 +160,54 @@
       width: 10px;
       margin: 8px; }
   .article__img {
-    margin-bottom: 20px;
     width: 100%; }
   .article__details {
     display: flex;
     justify-content: center;
     align-items: center; }
   .article__date {
-    margin: 0 10px;
     font-size: 0.75rem;
     font-style: italic; }
   .article__tag {
     font-size: 0.875rem;
     padding: 5px 7px;
     color: #A050BE;
-    border: 1px solid #A050BE;
-    margin: 0 10px; }
+    border: 1px solid #A050BE; }
   .article__content {
     font-weight: 100;
     font-size: 0.875rem;
     color: #464646;
     padding: 10px 20px; }
+
+.article__date, .article__tag, .main__date, .main__tag {
+  margin-top: 0; }
+
+.main__subtitle {
+  margin-top: 10px; }
+
+.article__h1 {
+  margin-top: 5px; }
+
+.article__date, .article__tag, .main__date, .main__tag {
+  margin-bottom: 0; }
+
+.article__h1 {
+  margin-bottom: 10px; }
+
+.about__img, .article__img, .main__subtitle {
+  margin-bottom: 20px; }
+
+.article__h1 {
+  margin-left: 0; }
+
+.article__date, .article__tag, .main__date, .main__tag {
+  margin-left: 10px; }
+
+.article__h1 {
+  margin-right: 0; }
+
+.article__date, .article__tag, .main__date, .main__tag {
+  margin-right: 10px; }
 
 .main {
   display: flex;
@@ -213,19 +235,15 @@
   .main__subtitle {
     display: flex;
     justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    margin-bottom: 20px; }
+    align-items: center; }
   .main__date {
-    margin: 0 10px;
     font-size: 0.75rem;
     font-style: italic; }
   .main__tag {
     font-size: 0.875rem;
     padding: 5px 7px;
     color: #A050BE;
-    border: 1px solid #A050BE;
-    margin: 0 10px; }
+    border: 1px solid #A050BE; }
   .main__details {
     border: 1px solid #eaeaeb; }
   .main__img {
