--- a/sass/_about.sass
+++ b/sass/_about.sass
@@ -36,7 +36,7 @@
             margin: 8px
     &__img
         width: 100%
-        margin-bottom: 20px
+        @extend %double-margin-bottom
     &__intro
         font-weight: 100
         color: $dark-grey
