--- a/sass/_article.sass
+++ b/sass/_article.sass
@@ -14,10 +14,7 @@
         @include fontSize(22px)
         color: $dark-grey
         letter-spacing: 1px
-        margin-top: 5px
-        margin-bottom: 10px
-        margin-left: 0
-        margin-right: 0
+        @extend %half-margin-top, %default-margin-bottom, %no-margin-left, %no-margin-right
     
     .breadcrumb
         @include flx(justify-content, center)
@@ -33,13 +30,13 @@
             width: 10px
             margin: 8px
     &__img
-        margin-bottom: 20px
+        @extend %double-margin-bottom
         width: 100%
     &__details
         @include flx(justify-content, center)
         align-items: center
     &__date
-        margin: 0 10px
+        @extend %no-margin-top, %no-margin-bottom, %default-margin-left, %default-margin-right
         @include fontSize(12px)
         font-style: italic
     &__tag
@@ -47,7 +44,7 @@
         padding: 5px 7px
         color: $purple
         border: 1px solid $purple
-        margin: 0 10px
+        @extend %no-margin-top, %no-margin-bottom, %default-margin-left, %default-margin-right
     &__content
         font-weight: 100
         @include fontSize(14px)
