ajustando o layout e estilizando os parágrafos com o loop while

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -34,7 +34,7 @@ $img-width: 45%
 @mixin fontSize($size)
     font-size: calculateRem($size)
 
-@import 'header', 'footer', 'about', 'article', 'collection'
+@import 'header', 'footer', 'about', 'article', 'collection', 'contact'
 
 $directions: top, bottom, left, right
 $layout-margin-size: 10px
